--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -1,7 +1,100 @@
-<!DOCTYPE html>
-<head>
-</head>
-<body>
+  <!DOCTYPE html>
+  <html>
+    <head>
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+      <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.1/mdb.min.css"  media="screen,projection"/>
+      <script src="https://kit.fontawesome.com/86afad5be5.js" crossorigin="anonymous"></script>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      
+<style>
+.border {
+ border-radius: 30px! important;
+}
+.logo {
+ width: 48px;
+}
+.nav-logo {
+ margin-bottom: 30px;
+}
+.container {
+ margin-top: 130px;
+ margin-bottom: 70px;
+}
+a.navbar-brand {
+ margin-left: 0px! important;
+ margin-right: 0px! important;
+ width: 48px! important;
+ height: 48px! important;
+}
+.nav-item {
+ padding-left: 15px! important;
+}
+.input-group-text {
+ padding-left: 0px! important;
+ margin: 0px! important;
+ padding: 0px! important;
+}
+@media only screen and (max-width: 320px) {
+  a.navbar-brand {
+   display: none;
+  }
+}
+</style>
+    </head>
 
-</body
-</html>
+    <body class="lead">
+<div class="container-lg">
+<nav class="navbar navbar-light fixed-top bg-light shadow-0">
+  <div class="container-fluid">
+    <form class="d-flex input-group w-auto">
+      <span class="input-group-text border-0" id="search-addon">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-mdb-toggle="collapse"
+      data-mdb-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"/>
+      <i class="fas fa-bars"></i>
+    </button>
+    </span>
+      <input
+        type="search"
+        class="form-control rounded border"
+        placeholder="Search"
+        aria-label="Search"
+        aria-describedby="search-addon"
+      />
+    </form>
+    <a class="navbar-brand">
+     <img class="logo" src="./../logo.png" alt="brand"/>
+    </a>
+  </div>
+<div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#home">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#fatwas">Fatwas</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#audios">Audios</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#videos">Videos</a>
+        </li>
+      </ul>
+    </div>
+</nav>
+
+<div class="container">            
+
+</div>
+
+    <!--JavaScript at end of body for optimized loading-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.1/mdb.min.js"></script>
+    </body>
+  </html>
