--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,6 @@
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-      <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.1/mdb.min.css"  media="screen,projection"/>
-      <script src="https://kit.fontawesome.com/86afad5be5.js" crossorigin="anonymous"></script>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+<link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.1/mdb.min.css"  media="screen,projection"/>
+<script src="https://kit.fontawesome.com/86afad5be5.js" crossorigin="anonymous"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<link href="{{ '/assets/style.css' | absolute_url }}" rel="stylesheet">
