--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -1,60 +1,16 @@
-  <!DOCTYPE html>
-  <html>
-    <head>
-    {% include head.html %}
-    </head>
-    <body class="lead">
+<!DOCTYPE html>
+ <html>
+ <head>
+  {% include head.html %}
+ </head>
+<body class="lead">
+
 <div class="container-lg">
-<nav class="navbar navbar-light fixed-top bg-light shadow-0">
-  <div class="container-fluid">
-    <form class="d-flex input-group w-auto">
-      <span class="input-group-text border-0" id="search-addon">
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-mdb-toggle="collapse"
-      data-mdb-target="#navbarNav"
-      aria-controls="navbarNav"
-      aria-expanded="false"
-      aria-label="Toggle navigation"/>
-      <i class="fas fa-bars"></i>
-    </button>
-    </span>
-      <input
-        type="search"
-        class="form-control rounded border"
-        placeholder="Search"
-        aria-label="Search"
-        aria-describedby="search-addon"
-      />
-    </form>
-    <a class="navbar-brand">
-     <img class="logo" src="./../logo.png" alt="brand"/>
-    </a>
-  </div>
-<div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#home">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#fatwas">Fatwas</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#audios">Audios</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#videos">Videos</a>
-        </li>
-      </ul>
-    </div>
-</nav>
-
-<div class="container">            
-
+ {% include navbar.html %}
+<div class="container">
+</div>
 </div>
 
-    <!--JavaScript at end of body for optimized loading-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.1/mdb.min.js"></script>
-    </body>
-  </html>
+ {% include scripts.html %}
+ </body>
+</html>
