--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -28,16 +28,24 @@
 <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#home">Home</a>
+          <a class="nav-link active" aria-current="page" href="/">
+           {{ site.data.locales[page.locale].menu.home }}
+          </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#fatwas">Fatwas</a>
+          <a class="nav-link" href="#fatwas">
+           {{ site.data.locales[page.locale].menu.fatwas }}
+          </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#audios">Audios</a>
+          <a class="nav-link" href="#audios">
+           {{ site.data.locales[page.locale].menu.audios }}
+          </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#videos">Videos</a>
+          <a class="nav-link" href="#videos">
+           {{ site.data.locales[page.locale].menu.videos }}
+          </a>
         </li>
       </ul>
     </div>
