--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,10 @@
 ---
 layout: main
 ---
-{% include languages.html %}
+
 {% if page.date %}
- <div class="content black-text">
+ <div>
  {{ content }}
+ {% include languages.html %}
 </div>
 {% endif %}
